Manually update embedded colab link

--- a/notebooks/sample_colab_notebook.ipynb
+++ b/notebooks/sample_colab_notebook.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled2.ipynb",
+      "name": "sample_colab_notebook.ipynb",
       "provenance": [],
       "authorship_tag": "ABX9TyOFk9djUoA/MLgMHCd7btkQ",
       "include_colab_link": true
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mcwehner/genesis/blob/colab_notebook_tests/notebooks/sample_colab_notebook\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mcwehner/genesis/blob/colab_notebook_tests/notebooks/sample_colab_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
